--- a/client/LinguaLearn/src/app/components/courses/courses/courses.component.css
+++ b/client/LinguaLearn/src/app/components/courses/courses/courses.component.css
@@ -8,7 +8,7 @@
   position: relative;
   width: 100%;
   height: fit-content;
-  padding-top: 30px;
+  /* padding-top: 30px; */
   padding-bottom: 30px;
   display: flex;
   flex-direction: column;
@@ -26,14 +26,15 @@
   position: relative;
   display: flex;
   gap: 20px;
-  width: 700px;
+  width: 1000px;
   height: fit-content;
   flex-direction: column;
+  transition: 0.3s all ease;
 }
 
 .filter-search {
   position: relative;
-  width: 98.5%;
+  width: 99%;
 }
 
 .filter-search input {
@@ -46,12 +47,12 @@
   border-radius: 5px;
   color: #6291de;
   font-size: 20px;
-  padding-left: 5px;
+  padding-left: 1%;
 }
 
 .filter-search button {
   position: absolute;
-  right: 5px;
+  right: 0px;
   top: 50%;
   transform: translateY(-50%);
   border: none;
@@ -91,7 +92,7 @@
   position: relative;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .level-filters button {
@@ -126,75 +127,21 @@
   width: 100%;
 }
 
-.course {
-  position: relative;
-  width: 400px;
-  height: fit-content;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  border: 1px solid #6291de;
-  background-color: #6291de;
-  color: white;
+@media only screen and (max-width: 1020px) {
+  .filters {
+    width: 800px !important;
+  }
 }
 
-.course img {
-  width: 400px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-}
-
-.course .course-info {
-  position: relative;
-  width: 100%;
-  padding-left: 10px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.course-info .name {
-  font-size: 25px;
-  font-weight: 700;
-}
-
-.course-info .period {
-  position: relative;
-  width: 95%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.course-info a {
-  position: relative;
-  width: 95%;
-  height: 40px;
-  text-decoration: none;
-  color: #6291de;
-  border: 1px solid #6291de;
-  background-color: white;
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 18px;
-  transition: 0.3s all ease;
-}
-
-.course-info a:hover {
-  color: white;
-  border: 1px solid white;
-  background-color: #6291de;
-}
-
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 800px) {
   .filters {
     width: 400px !important;
   }
   .level-filters {
-    flex-wrap: wrap;
+    flex-direction: column;
     gap: 10px;
+  }
+  .level-filters button {
+    width: 100%;
   }
 }
