--- a/client/LinguaLearn/src/app/components/courses/courses/courses.component.html
+++ b/client/LinguaLearn/src/app/components/courses/courses/courses.component.html
@@ -1,94 +1,40 @@
-<div class="courses">
-  <!-- header optional!!! -->
+<div
+  class="courses"
+  [ngStyle]="{ 'padding-top': !showHeader ? '30px' : '0px' }"
+>
   <app-courses-header style="width: 100%" *ngIf="showHeader" />
 
   <div class="title">Latest Courses</div>
-  <div class="course-items">
-    <div class="course">
-      <img
-        src="https://i0.wp.com/whizsmart.com/wp-content/uploads/2020/09/Spanish.jpg?fit=610%2C432&ssl=1"
-        alt=""
+  <div class="filters" *ngIf="showHeader && courses.length > 0">
+    <form class="filter-search">
+      <input
+        type="text"
+        name="search"
+        id="search"
+        placeholder="Search by name"
       />
-      <div class="course-info">
-        <div class="name">Spanish Course</div>
-        <div class="period">
-          <div class="start">
-            <i class="fa-solid fa-circle-play"></i> 19-02-2023
-          </div>
-          <div class="duration"><i class="fa-solid fa-clock"></i> 6 months</div>
-        </div>
-        <a href="">View More</a>
-      </div>
+      <button type="submit">
+        <i class="fa-solid fa-paper-plane"></i>
+      </button>
+    </form>
+    <div class="separator">OR</div>
+    <div class="level-filters">
+      <button>All Courses</button>
+      <button>Entry Level</button>
+      <button>Mid Level</button>
+      <button>Advanced Level</button>
+      <button>Expert Level</button>
     </div>
-    <div class="course">
-      <img
-        src="https://i0.wp.com/whizsmart.com/wp-content/uploads/2020/09/Spanish.jpg?fit=610%2C432&ssl=1"
-        alt=""
-      />
-      <div class="course-info">
-        <div class="name">Spanish Course</div>
-        <div class="period">
-          <div class="start">
-            <i class="fa-solid fa-circle-play"></i> 19-02-2023
-          </div>
-          <div class="duration"><i class="fa-solid fa-clock"></i> 6 months</div>
-        </div>
-        <a href="">View More</a>
-      </div>
-    </div>
-    <div class="course">
-      <img
-        src="https://i0.wp.com/whizsmart.com/wp-content/uploads/2020/09/Spanish.jpg?fit=610%2C432&ssl=1"
-        alt=""
-      />
-      <div class="course-info">
-        <div class="name">Spanish Course</div>
-        <div class="period">
-          <div class="start">
-            <i class="fa-solid fa-circle-play"></i> 19-02-2023
-          </div>
-          <div class="duration"><i class="fa-solid fa-clock"></i> 6 months</div>
-        </div>
-        <a href="">View More</a>
-      </div>
-    </div>
-    <div class="course">
-      <img
-        src="https://i0.wp.com/whizsmart.com/wp-content/uploads/2020/09/Spanish.jpg?fit=610%2C432&ssl=1"
-        alt=""
-      />
-      <div class="course-info">
-        <div class="name">Spanish Course</div>
-        <div class="period">
-          <div class="start">
-            <i class="fa-solid fa-circle-play"></i> 19-02-2023
-          </div>
-          <div class="duration"><i class="fa-solid fa-clock"></i> 6 months</div>
-        </div>
-        <a href="">View More</a>
-      </div>
-    </div>
-    <div class="course">
-      <img
-        src="https://i0.wp.com/whizsmart.com/wp-content/uploads/2020/09/Spanish.jpg?fit=610%2C432&ssl=1"
-        alt=""
-      />
-      <div class="course-info">
-        <div class="name">Spanish Course</div>
-        <div class="period">
-          <div class="start">
-            <i class="fa-solid fa-circle-play"></i> 19-02-2023
-          </div>
-          <div class="duration"><i class="fa-solid fa-clock"></i> 6 months</div>
-        </div>
-        <a href="">View More</a>
-      </div>
-    </div>
+  </div>
+  <div class="course-items" *ngIf="courses.length > 0">
+    <ng-container *ngFor="let course of courses">
+      <app-course-item [courseData]="course" />
+    </ng-container>
   </div>
 
   <!-- WHEN THERE ARE NO COURSES -->
-  <!-- <div class="no-courses">
-        There are currently no courses available. <br />
-        Check back later!
-      </div> -->
+  <div class="no-courses" *ngIf="courses.length == 0">
+    There are currently no courses available. <br />
+    Check back later!
+  </div>
 </div>
