--- a/client/LinguaLearn/src/app/components/shared/header/header.component.html
+++ b/client/LinguaLearn/src/app/components/shared/header/header.component.html
@@ -2,44 +2,62 @@
   <img src="/assets/logo.png" alt="" />
   <ul class="navlist" [ngClass]="getMenuClass()">
     <li>
-      <a routerLink="/home"><i class="fa-solid fa-house"></i> Home</a>
+      <a routerLink="/home" routerLinkActive="active-link"
+        ><i class="fa-solid fa-house"></i> Home</a
+      >
     </li>
     <li>
-      <a routerLink="/courses"><i class="fa-solid fa-book"></i> Courses</a>
+      <a
+        routerLink="/courses"
+        routerLinkActive="active-link"
+        [routerLinkActiveOptions]="{ exact: true }"
+        ><i class="fa-solid fa-book"></i> Courses</a
+      >
     </li>
     <li>
-      <a routerLink="/teachers"
+      <a routerLink="/teachers" routerLinkActive="active-link"
         ><i class="fa-solid fa-chalkboard-user"></i> Teachers</a
       >
     </li>
     <li>
-      <a routerLink="/courses/create"
-        ><i class="fa-solid fa-square-plus"></i> Create Course</a
-      >
-    </li>
-    <li>
-      <a routerLink="/contact"
+      <a routerLink="/contact" routerLinkActive="active-link"
         ><i class="fa-solid fa-file-signature"></i> Contact</a
       >
     </li>
-    <li>
-      <a routerLink="/user/profile"><i class="fa-solid fa-user"></i>USERNAME</a>
-    </li>
-    <li>
-      <a routerLink="/user/login"
-        ><i class="fa-solid fa-right-to-bracket"></i> Login</a
-      >
-    </li>
-    <li>
-      <a routerLink="/user/register"
-        ><i class="fa-solid fa-user-plus"></i> Register</a
-      >
-    </li>
-    <li>
-      <a (click)="logout()"
-        ><i class="fa-solid fa-right-from-bracket"></i> Logout</a
-      >
-    </li>
+
+    <ng-container *ngIf="isLoggedIn">
+      <li>
+        <a
+          routerLink="/courses/create"
+          routerLinkActive="active-link"
+          [routerLinkActiveOptions]="{ exact: true }"
+          ><i class="fa-solid fa-square-plus"></i> Create Course</a
+        >
+      </li>
+      <li>
+        <a routerLink="/user/{{ userId }}" routerLinkActive="active-link"
+          ><i class="fa-solid fa-user"></i>{{ username }}'s Profile</a
+        >
+      </li>
+      <li>
+        <a (click)="logout()" routerLinkActive="active-link"
+          ><i class="fa-solid fa-right-from-bracket"></i> Logout</a
+        >
+      </li>
+    </ng-container>
+
+    <ng-container *ngIf="!isLoggedIn">
+      <li>
+        <a routerLink="/user/login" routerLinkActive="active-link"
+          ><i class="fa-solid fa-right-to-bracket"></i> Login</a
+        >
+      </li>
+      <li>
+        <a routerLink="/user/register" routerLinkActive="active-link"
+          ><i class="fa-solid fa-user-plus"></i> Register</a
+        >
+      </li>
+    </ng-container>
   </ul>
 
   <div class="menu-icon" (click)="toggleMenu()">
