--- a/client/LinguaLearn/src/app/components/courses/course-details/course-details.component.css
+++ b/client/LinguaLearn/src/app/components/courses/course-details/course-details.component.css
@@ -38,6 +38,7 @@
 .left-side img {
   position: relative;
   width: 100%;
+  height: 275px;
   border-radius: 5px;
 }
 
@@ -132,16 +133,9 @@
   border-radius: 5px;
   font-size: 18px;
   display: flex;
-  flex-direction: column;
   gap: 10px;
   cursor: pointer;
-}
-
-.schedule .action-arrow {
-  position: absolute;
-  right: 10px;
-  top: 13px;
-  transition: 0.3s all ease;
+  justify-content: space-between;
 }
 
 .rotated {
@@ -171,6 +165,7 @@
   border: 1px solid white;
   font-size: 20px;
   transition: 0.3s all ease;
+  cursor: pointer;
 }
 
 .controls a:hover {
