--- a/client/LinguaLearn/src/app/components/courses/courses/courses.component.css
+++ b/client/LinguaLearn/src/app/components/courses/courses/courses.component.css
@@ -117,6 +117,12 @@
   background-color: #6291de;
 }
 
+.active-filter {
+  color: white !important;
+  border: 1px solid white !important;
+  background-color: #6291de !important;
+}
+
 .course-items {
   position: relative;
   display: flex;
