--- a/client/LinguaLearn/src/app/components/shared/header/header.component.html
+++ b/client/LinguaLearn/src/app/components/shared/header/header.component.html
@@ -26,7 +26,7 @@
     </li>
 
     <ng-container *ngIf="isLoggedIn">
-      <li>
+      <li *ngIf="isTeacher">
         <a
           routerLink="/courses/create"
           routerLinkActive="active-link"
