--- a/client/LinguaLearn/src/app/components/courses/course-details/course-details.component.html
+++ b/client/LinguaLearn/src/app/components/courses/course-details/course-details.component.html
@@ -25,7 +25,7 @@
         <div class="desc-item">
           <div class="title">Spots:</div>
           <div class="value">
-            {{ spotsLeft }}
+            {{ spotsLeft == 0 ? "Full" : spotsLeft }}
           </div>
         </div>
         <div class="desc-item">
@@ -58,13 +58,16 @@
         </div>
       </div>
     </div>
-    <div class="controls" *ngIf="canManageCourse || canSignUpForCourse">
+    <div class="controls" *ngIf="isUser">
       <ng-container *ngIf="canManageCourse">
         <a routerLink="/courses/{{ course?._id }}/edit">Edit</a>
         <a (click)="deleteCourse()">Delete</a>
       </ng-container>
 
-      <a (click)="signUpForCourse()" *ngIf="canSignUpForCourse">Sign Up</a>
+      <a (click)="signUpForCourse()" *ngIf="canSignUpForCourse && spotsLeft > 0"
+        >Sign Up</a
+      >
+
       <span *ngIf="!canSignUpForCourse && !canManageCourse"
         >You have already signed up for this course!</span
       >
