--- a/client/LinguaLearn/src/app/components/courses/course-edit/course-edit.component.css
+++ b/client/LinguaLearn/src/app/components/courses/course-edit/course-edit.component.css
@@ -145,3 +145,9 @@ input.ng-invalid.ng-touched {
 input.ng-valid.ng-touched {
   border: 1px solid greenyellow;
 }
+
+input:read-only {
+  cursor: not-allowed;
+  border-color: gray !important;
+  color: gray !important;
+}
