--- a/client/LinguaLearn/src/app/components/landing/home/home.component.html
+++ b/client/LinguaLearn/src/app/components/landing/home/home.component.html
@@ -15,5 +15,9 @@
   </div>
 
   <!-- RECENT COURSES -->
-  <app-courses [showHeader]="false" [isLimited]="true" />
+  <app-courses
+    [showHeader]="false"
+    [isLimited]="true"
+    [title]="'Recent Courses'"
+  />
 </section>
