--- a/client/LinguaLearn/src/app/components/shared/header/header.component.css
+++ b/client/LinguaLearn/src/app/components/shared/header/header.component.css
@@ -36,6 +36,7 @@ header img {
   color: white;
   border: 1px solid white;
   transition: 0.3s all ease;
+  cursor: pointer;
 }
 
 .navlist li a:hover {
