--- a/client/LinguaLearn/src/app/components/teachers/teacher-item/teacher-item.component.html
+++ b/client/LinguaLearn/src/app/components/teachers/teacher-item/teacher-item.component.html
@@ -1,10 +1,12 @@
 <div class="teacher">
   <img
-    src="https://i.guim.co.uk/img/media/bc12099e16c5e0a7ed7b1e63687dac6dd71ff13b/305_331_2800_1680/master/2800.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=3d0d6772b03019da00428fe5537404b5"
-    alt=""
+    src="{{ teacherData?.image }}"
+    alt="{{ teacherData?.firstName }} {{ teacherData?.lastName }}"
   />
   <div class="teacher-info">
-    <div class="name">Kristiyan Petsanov</div>
-    <a href="">View Profile</a>
+    <div class="name">
+      {{ teacherData?.firstName }} {{ teacherData?.lastName }}
+    </div>
+    <a routerLink="/user/{{ teacherData?._id }}">View Profile</a>
   </div>
 </div>
