--- a/ui/views/details.html
+++ b/ui/views/details.html
@@ -150,6 +150,33 @@
               <div class="schedule">3. Spanish Advanced</div>
             </div>
           </div>
+          <div class="desc-item">
+            <div class="title">Students</div>
+            <div class="students">
+              <div class="student" href="">
+                <span>Kristiyan Petsanov</span>
+                <div class="user-controls">
+                  <a href="" class="user-control">
+                    <i class="fa-solid fa-trash"></i>
+                  </a>
+                  <a href="" class="user-control">
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  </a>
+                </div>
+              </div>
+              <div class="student" href="">
+                <span>Kristiyan Petsanov</span>
+                <div class="user-controls">
+                  <a href="" class="user-control">
+                    <i class="fa-solid fa-trash"></i>
+                  </a>
+                  <a href="" class="user-control">
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="controls">
           <a href="">Edit</a>
