--- a/ui/views/profile.html
+++ b/ui/views/profile.html
@@ -109,6 +109,9 @@
             <span>Courses Teaching</span>
             <span>2</span>
           </div>
+          <div class="controls">
+            <a href="">Edit</a>
+          </div>
         </div>
       </div>
 
