--- a/client/LinguaLearn/src/app/components/landing/not-found/not-found.component.html
+++ b/client/LinguaLearn/src/app/components/landing/not-found/not-found.component.html
@@ -6,7 +6,7 @@
     <div class="bottom">
       <div class="header">Looks like you're lost!</div>
       <div class="desc">The page you are looking for doesn't exist!</div>
-      <a routerLink="/home">Home</a>
+      <a routerLink="/home">Go To Home</a>
     </div>
   </div>
 </section>
