--- a/client/LinguaLearn/src/styles.css
+++ b/client/LinguaLearn/src/styles.css
@@ -7,7 +7,7 @@ body {
   height: 100vh;
   background-color: white;
   font-family: "Inter", sans-serif;
-  overflow-x: hidden !important;
+  overflow: hidden !important;
 }
 
 .form-errors {
