--- a/LinguaLearn/src/app/components/user/login/login.component.css
+++ b/LinguaLearn/src/app/components/user/login/login.component.css
@@ -72,9 +72,10 @@
 
 .input-field i {
   position: absolute;
-  bottom: 18px;
   left: 10px;
   font-size: 20px;
+  top: 70%;
+  transform: translateY(-75%);
 }
 
 .auth-form button,
