--- a/LinguaLearn/src/styles.css
+++ b/LinguaLearn/src/styles.css
@@ -1,13 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-body {
+body,
+html,
+.wrapper {
   margin: 0;
   padding: 0;
   width: 100vw;
   height: 100vh;
   background-color: white;
   font-family: "Inter", sans-serif;
-  overflow: hidden !important;
+  overflow-x: hidden !important;
 }
 
 .form-errors {
