--- a/LinguaLearn/src/app/components/admin-panel/admin/admin.component.html
+++ b/LinguaLearn/src/app/components/admin-panel/admin/admin.component.html
@@ -1,9 +1,11 @@
-<section class="admin-page">
-  <app-admin-nav style="height: 100%" />
-  <div class="page">
-    <router-outlet name="panel"></router-outlet>
-  </div>
-  <div class="res-error">
-    Screen Width above 1100px is required to display admin panel!
+<section class="admin">
+  <div class="admin-page">
+    <app-admin-nav style="height: 100%" />
+    <div class="page">
+      <router-outlet name="panel"></router-outlet>
+    </div>
+    <div class="res-error">
+      Screen Width above 1100px is required to display admin panel!
+    </div>
   </div>
 </section>
