--- a/LinguaLearn/src/app/components/admin-panel/admin/admin.component.css
+++ b/LinguaLearn/src/app/components/admin-panel/admin/admin.component.css
@@ -1,9 +1,18 @@
+.admin {
+  position: relative;
+  width: 100%;
+  height: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 50px 60px 50px;
+}
+
 .admin-page {
   position: relative;
   width: 1400px;
-  height: 70%;
+  height: 100%;
   display: flex;
-  padding: 30px 50px 60px 50px;
   justify-content: center;
   align-items: center;
   gap: 50px;
